# kliping

./: .gitignore  README.md  build.py  build.spec  clipper.spec  generate_keys.py  keygen.py  pyproject.toml  test_keys.txt
.github/workflows/: build.yml
clipper_cli/: __init__.py  __main__.py  analyzer.py  clipper.py  license.py  llm_providers.py  main.py  transcriber.py  utils.py
docs/: GUIDE_SELLER.md  GUIDE_USER.md  SELLER_GUIDE.md  USER_GUIDE.md
src/clipper_cli/: __init__.py  config.py  license.py  main.py  models.py
src/clipper_cli/analysis/: __init__.py  prompts.py  viral_detector.py
src/clipper_cli/batch/: __init__.py  processor.py  reporter.py
src/clipper_cli/interactive/: __init__.py  app.py  prompts.py  screens.py
src/clipper_cli/llm/: __init__.py  base.py  claude_provider.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
src/clipper_cli/transcription/: __init__.py  assemblyai_service.py  base.py  whisper_service.py
src/clipper_cli/utils/: __init__.py  console.py
src/clipper_cli/video/: __init__.py  clipper.py  processor.py
